Fixes #13511: In directive page, tooltip is not correctly aligned with text

--- a/rudder-web/src/main/webapp/style/rudder/rudder.css
+++ b/rudder-web/src/main/webapp/style/rudder/rudder.css
@@ -803,12 +803,16 @@ table.noMarginGrid {
 
 }
 
-.variableDefinition span,
+.variableDefinition > span,
 .variableDefinition td,
 .variableDefinition input {
   font-size: 12px;
   font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
   vertical-align: middle;
+}
+
+.wbBaseFieldLabel .tw-bs .ruddericon {
+    top: -2px;
 }
 
 .variableDefinition sup {
